# hideous_robot

./: README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/pkgconfig/: hideous_robot.pc  velodyne_gazebo_plugins.pc
devel/share/hideous_robot/cmake/: hideous_robotConfig.cmake
devel/share/velodyne_gazebo_plugins/cmake/: velodyne_gazebo_pluginsConfig.cmake
src/hideous_robot/: CMakeLists.txt  README.md  gazebo.rviz  package.xml
src/hideous_robot/launch/: hideous_world.launch
src/hideous_robot/nodes/: hideous_robot_key_control.py
src/hideous_robot/robot_control/config/: robot_control.yaml
src/hideous_robot/robot_description/xacro/: VLP-16.urdf.xacro  macros.xacro  material.xacro  robot.gazebo  robot.xacro
src/hideous_robot/worlds/: hideous_world.world
